--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,26 @@
+@font-face {
+    font-family: "Graphik";
+    font-style: normal;
+    font-weight: 400;
+    src: url("https://ark.cregital.com/assets/fonts/Graphik-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Graphik";
+    font-style: normal;
+    font-weight: 600;
+    src: url("https://ark.cregital.com/assets/fonts/Graphik-Semibold.ttf") format("truetype");
+}
+
+body
+{
+    font-family: "Graphik", sans-serif;
+    font-weight: 400;
+    max-width: 1000px;
+    margin: auto;
+    text-align: center;
+}
+
 .start
 {
     background-image: url("./zavrsni-rad/assets/header-background.png");
