--- a/Style.css
+++ b/Style.css
@@ -16,9 +16,27 @@ body
 {
     font-family: "Graphik", sans-serif;
     font-weight: 400;
-    max-width: 1000px;
+    max-width: 1260px;
     margin: auto;
     text-align: center;
+    font-size: 1em;
+    color: rgba(0, 0, 0, 0.678);
+    line-height: 1.3;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+a
+{
+    color: #00baba;
+    text-decoration: none;
+}
+
+button:hover
+{
+    background-color: #00baba;
+    cursor: pointer;
 }
 
 .start
@@ -42,4 +60,149 @@ body
 .headerButton
 {
     display: inline-block;
+}
+
+.newArticle
+{
+    margin-top: 60px;
+    margin-bottom: 30px;
+}
+
+.introTitle
+{
+    font-weight: 600;
+    font-size: 2.2rem;
+    color: rgba(0, 0, 0, 0.788);
+    max-width: 400px;
+    margin: 0 auto 20px auto;
+}
+
+.introText
+{
+    margin: 0 320px;
+}
+
+.share
+{
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.788);
+    margin: 0;
+    margin-top: 20px;
+}
+
+.instagramButton
+{
+    border: 0;
+    margin-left: 7px;
+    padding: 9px 10px 7px 9.5px;
+    background-color: rgba(0, 186, 186, 0.1);
+}
+
+.twitterButton
+{
+    border: 0;
+    margin-left: 7px;
+    padding: 9px 10px 8px 10px;
+    background-color: rgba(0, 186, 186, 0.1);
+}
+
+.facebookButton
+{
+    border: 0;
+    margin-left: 7px;
+    padding: 9px 13px 8px 13px;
+    background-color: rgba(0, 186, 186, 0.1);
+}
+
+.firstArticle
+{
+    display: flex;
+    margin-top: 60px;
+    margin-bottom: 30px;
+}
+
+.firstArticleText
+{
+    text-align: left;
+    max-width: 400px;
+    line-height: 1.5;
+    padding-left: 11%;
+}
+
+.articleTitle
+{
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: rgba(0, 0, 0, 0.788);
+}
+
+.secondArticle
+{
+    background-image: url("./zavrsni-rad/assets/contacts.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 0px 400px;
+}
+
+.secondArticleText
+{
+    max-width: 500px;
+    margin: auto;
+}
+
+.giftInfo
+{
+    font-size: 24px;
+    display: inline-block;
+    margin-bottom: 0;
+}
+
+.naira
+{
+    height: 20px;
+    width: auto;
+    display: inline-block
+}
+
+.ideaInput
+{
+    text-align: center;
+    padding: 0px 7px;
+    margin-top: 15px;
+    border: 0;
+    border-bottom: 2px solid #00baba;
+    color: #00baba;
+    cursor: pointer;
+    max-width: 100%;
+    font-size: 24px;
+    line-height: 1.4;
+    box-sizing: border-box;
+}
+
+::placeholder
+{
+    color: #00baba;
+    font-size: 24px;
+}
+
+.inputBox
+{
+    margin: 0;
+    border: 0;
+}
+
+.ideaInfo
+{
+    font-size: 12px;
+}
+
+.buttonToSend
+{
+    color: white;
+    background-color: #00baba;
+    border: none;
+    font-weight: 600;
+    padding: 8px 24px;
+    font-size: 15px;
+    letter-spacing: 0.2px;
 }
