--- a/Style.css
+++ b/Style.css
@@ -25,6 +25,7 @@ body
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column;
 }
 
 a
@@ -39,27 +40,41 @@ button:hover
     cursor: pointer;
 }
 
-.start
+.blueBackground
+{
+    background-color: rgba(0, 186, 186, 0.1);
+}
+
+.navigationBar
 {
     background-image: url("./zavrsni-rad/assets/header-background.png");
     background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: 1000px;
+    padding-bottom: 400px;
+    display: flex;
+    justify-content: space-between;
+    max-height: 100px;
 }
 
 .logo
 {
     display: inline-block;
+    background-color: transparent;
+    margin: 20px 0 0 20px;
+    height: 56px;
 }
 
 .moon
 {
-    display: inline-block;
-    height: 20px;
-    width: 20px;
+    margin-right: 55px;
 }
 
 .headerButton
 {
-    display: inline-block;
+    padding: 35px 30px!important;
+    margin-right: 20px;
 }
 
 .newArticle
@@ -114,7 +129,7 @@ button:hover
     background-color: rgba(0, 186, 186, 0.1);
 }
 
-.firstArticle
+.nonCenteredArticle
 {
     display: flex;
     margin-top: 60px;
@@ -173,10 +188,11 @@ button:hover
     border-bottom: 2px solid #00baba;
     color: #00baba;
     cursor: pointer;
-    max-width: 100%;
+    max-width: 220px;
     font-size: 24px;
     line-height: 1.4;
     box-sizing: border-box;
+    background-color: transparent;
 }
 
 ::placeholder
@@ -196,7 +212,7 @@ button:hover
     font-size: 12px;
 }
 
-.buttonToSend
+.buttonToSendFromInput
 {
     color: white;
     background-color: #00baba;
@@ -205,4 +221,48 @@ button:hover
     padding: 8px 24px;
     font-size: 15px;
     letter-spacing: 0.2px;
+}
+
+.thirdArticleText
+{
+    text-align: right;
+    max-width: 390px;
+    line-height: 1.5;
+    padding-right: 11%;
+}
+
+.lastArticle
+{
+    background-color: rgba(0, 186, 186, 0.1);
+    padding: 40px 0 60px 0;
+}
+
+.lastArticleTitle
+{
+    margin-bottom: 0;
+}
+
+.lastArticleInput
+{
+    max-width: 550px;
+    margin: auto;
+    margin-bottom: 40px;
+}
+
+.lastInput
+{
+    max-width: 150px;
+}
+
+.nameInput
+{
+    max-width: 120px;
+}
+
+.copyright
+{
+    display: flex;
+    justify-content: space-between;
+    font-size: 13px;
+    margin-bottom: 30px;
 }
